--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,27 +1,18 @@
 {
-  "name": "inventory-management",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.1"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.1",
+    "@mui/x-data-grid": "^7.23.2",
+    "axios": "^1.7.9",
+    "lucide-react": "^0.468.0",
+    "numeral": "^2.0.6",
+    "recharts": "^2.15.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.1",
-    "@eslint/eslintrc": "^3"
+    "@types/node": "^22.10.2",
+    "@types/numeral": "^2.0.5",
+    "@types/uuid": "^10.0.0"
   }
 }
