--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,12 @@
 {
+  "devDependencies": {
+    "@types/node": "^22.10.2",
+    "@types/numeral": "^2.0.5",
+    "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
+  },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -6,13 +14,16 @@
     "@mui/x-data-grid": "^7.23.2",
     "axios": "^1.7.9",
     "lucide-react": "^0.468.0",
+    "next": "^15.1.1",
     "numeral": "^2.0.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "recharts": "^2.15.0",
     "uuid": "^11.0.3"
   },
-  "devDependencies": {
-    "@types/node": "^22.10.2",
-    "@types/numeral": "^2.0.5",
-    "@types/uuid": "^10.0.0"
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   }
 }
