--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "tw-colors": "^3.3.2"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
